--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
+    "typeorm-extension": "^3.6.1",
     "winston": "^3.14.2",
     "winston-daily-rotate-file": "^5.0.0"
   },
